Top button added & styled

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <ul id="nav-menu">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -88,6 +88,7 @@
     <footer>
         <p>© 2025 Innov8 Techies. All rights reserved.</p>
     </footer>
-    <script src="scripts.js"></script>
+    <button id="scrollToTopBtn" title="Go to top"><img src="/assets/top.svg" alt="top"></button>
+        <script src="scripts.js"></script>
 </body>
 </html>
