shabeeh profile updated

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="assets/member2.jpg" alt="Shabeeh Mohammad Abidi">
+                <img src="shabeeh.png" alt="Shabeeh Mohammad Abidi">
                 <h3>Shabeeh Mohammad Abidi</h3>
                 <p>Passionate Developer</p>
                 <div class="social-links">
-                    <a href="https://github.com/amitsharma" target="_blank"><img src="assets/github.svg" alt="GitHub"></a>
-                    <a href="https://linkedin.com/in/amitsharma" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://github.com/Shabeehabidi/" target="_blank"><img src="assets/github.svg" alt="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/shabeeh-mohammad-abidi-78167a269/" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
                     <a href="https://linkedin.com/in/tushartripathi" target="_blank"><img src="assets/link.svg" alt="Portfolio"></a>
                 </div>
             </div>
