--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="shabeeh.png" alt="Shabeeh Mohammad Abidi">
+                <img src="assets/shabeeh.png" alt="Shabeeh Mohammad Abidi">
                 <h3>Shabeeh Mohammad Abidi</h3>
                 <p>Passionate Developer</p>
                 <div class="social-links">
