Update dhruv profile pic

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="assets/member3.jpg" alt="Dhruv Tripathi">
+                <img src="assets/dhruv.png" alt="Dhruv Tripathi">
                 <h3>Dhruv Tripathi</h3>
                 <p>Creative Technologist</p>
                 <div class="social-links">
