--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 <div class="social-links">
                     <a href="https://github.com/Shabeehabidi/" target="_blank"><img src="assets/github.svg" alt="GitHub"></a>
                     <a href="https://www.linkedin.com/in/shabeeh-mohammad-abidi-78167a269/" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
-                    <a href="https://linkedin.com/in/tushartripathi" target="_blank"><img src="assets/link.svg" alt="Portfolio"></a>
                 </div>
             </div>
             <div class="team-member">
@@ -54,9 +53,8 @@
                 <h3>Dhruv Tripathi</h3>
                 <p>Creative Technologist</p>
                 <div class="social-links">
-                    <a href="https://github.com/riyasingh" target="_blank"><img src="assets/github.svg" alt="GitHub"></a>
-                    <a href="https://linkedin.com/in/riyasingh" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
-                    <a href="https://linkedin.com/in/tushartripathi" target="_blank"><img src="assets/link.svg" alt="Portfolio"></a>
+                    <a href="https://github.com/dhruv865" target="_blank"><img src="assets/github.svg" alt="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/dhruv-tripathi-758447288/" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
                 </div>
             </div>
         </div>
